All birthday Items done

--- a/Views/Birthday/peppapig.cshtml
+++ b/Views/Birthday/peppapig.cshtml
@@ -1,10 +1,4 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
+﻿    <style>
         :root {
             --bdclr: rgb(255, 183, 5);
             --bdclr2: rgba(0, 59, 149);
@@ -202,8 +196,7 @@
                 font-size: 30px
             }
     </style>
-</head>
-<body class="mainPage BirthdayPage">
+<div class="mainPage BirthdayPage">
     <div class="header">
         <ul class="bannerList">
             <li>
@@ -259,32 +252,32 @@
                 </p>
             </div>
         </div>
-
+        <!-- Peppa Pig Theme board -->
         <div class="purchase">
             <h2><b><u>Order Now!</u></b></h2>
             <hr>
             <form class="purchaseForm">
                 <div>
-                    <label for="table">Select a product</label>
-                    <select name="table&chair" id="table" required>
+                    <label for="product">Select a product</label>
+                    <select name="itemTypeCode" id="product" required>
                         <option>-</option>
-                        <option value="BoardABC">Board A+B+C</option>
-                        <option value="BoardA">Board A</option>
-                        <option value="BoardB">Board B</option>
-                        <option value="BoardC">Board C</option>
-                        <option value="BoardAB">Board A+B</option>
-                        <option value="BoardAC">Board A+C</option>
-                        <option value="BoardBC">Board B+C</option>
+                        <option value='["pep-tb-001","pep-tb-002","pep-tb-003"]'>Theme board A+B+C</option>
+                        <option value="pep-tb-001">Theme board A</option>
+                        <option value="pep-tb-002">Theme board B</option>
+                        <option value="pep-tb-003">Theme board C</option>
+                        <option value='["pep-tb-001","pep-tb-002"]'>Theme board A+B</option>
+                        <option value='["pep-tb-001","pep-tb-003"]'>Theme board B+C</option>
+                        <option value='["pep-tb-002","pep-tb-003"]'>Theme board A+C</option>
                     </select>
                 </div>
-                <label for="tableCountName">Select Quantitiy : </label>
-                <input type="number" id="tableCount" name="tableCountName" min="1" max="1" placeholder="Quantity" required>
+                <label for="quantity">Select Quantitiy : </label>
+                <input type="number" id="quantity" name="quantity" min="1" max="90" placeholder="Quantity" required>
                 <div>
                     <label for="startDate">Start Date :</label>
-                    <input type="date" name="startDate" required>
+                    <input type="date" id="startDate" name="startDate" required>
                     <div>
-                        <label for="rentalTime">Time : </label>
-                        <select name="timeFrame" id="rentalTime" required>
+                        <label for="startTime">Time : </label>
+                        <select name="startTime" id="startTime" required>
                             <option>-</option>
                             <option value="Moring">Morning (7am-11am)</option>
                             <option value="Afternoon">Afternoon (11am-4pm)</option>
@@ -294,9 +287,9 @@
                 </div>
                 <div>
                     <label for="endDate">Return Date :</label>
-                    <input type="date" name="endDate" required>
+                    <input type="date" id="endDate" name="endDate" required>
                     <div>
-                        <label for="rentalTime">Time : </label><select name="timeFrame" id="rentalTime" required>
+                        <label for="endTime">Time : </label><select name="endTime" id="endTime" required>
                             <option>-</option>
                             <option value="Moring">Morning (7am-11am)</option>
                             <option value="Afternoon">Afternoon (11am-4pm)</option>
@@ -304,7 +297,7 @@
                         </select>
                     </div>
                 </div>
-                <input type="submit" value="Check Availability">
+                <button id="addToCartBtn">Add to Cart</button>
             </form>
         </div>
     </div>
@@ -338,26 +331,27 @@
                 </p>
             </div>
         </div>
+        <!-- Peppa pig Dessert table -->
 
         <div class="purchase">
             <h2><b><u>Order Now!</u></b></h2>
             <hr>
             <form class="purchaseForm">
                 <div>
-                    <label for="table">Select a product</label>
-                    <select name="table&chair" id="table" required>
+                    <label for="product">Select a product</label>
+                    <select name="itemTypeCode" id="product" required>
                         <option>-</option>
-                        <option value="DessertTablesMC">Dessert Table</option>
+                        <option value="pep-dt-001">Dessert Table</option>
                     </select>
                 </div>
-                <label for="tableCountName">Select Quantitiy : </label>
-                <input type="number" id="tableCount" name="tableCountName" min="1" max="1" placeholder="Quantity" required>
+                <label for="quantity">Select Quantitiy : </label>
+                <input type="number" id="quantity" name="quantity" min="1" max="90" placeholder="Quantity" required>
                 <div>
                     <label for="startDate">Start Date :</label>
-                    <input type="date" name="startDate" required>
+                    <input type="date" id="startDate" name="startDate" required>
                     <div>
                         <label for="rentalTime">Time : </label>
-                        <select name="timeFrame" id="rentalTime" required>
+                        <select name="rentalTime" id="startTime" required>
                             <option>-</option>
                             <option value="Moring">Morning (7am-11am)</option>
                             <option value="Afternoon">Afternoon (11am-4pm)</option>
@@ -367,9 +361,9 @@
                 </div>
                 <div>
                     <label for="endDate">Return Date :</label>
-                    <input type="date" name="endDate" required>
+                    <input type="date" id="endDate" name="endDate" required>
                     <div>
-                        <label for="rentalTime">Time : </label><select name="timeFrame" id="rentalTime" required>
+                        <label for="endTime">Time : </label><select name="endTime" id="endTime" required>
                             <option>-</option>
                             <option value="Moring">Morning (7am-11am)</option>
                             <option value="Afternoon">Afternoon (11am-4pm)</option>
@@ -377,7 +371,7 @@
                         </select>
                     </div>
                 </div>
-                <input type="submit" value="Check Availability">
+                <button id="addToCartBtn">Add to Cart</button>
             </form>
         </div>
 
@@ -414,25 +408,27 @@
             </div>
         </div>
 
+        <!-- Peppa Pig Theme board-->
+
         <div class="purchase">
             <h2><b><u>Order Now!</u></b></h2>
             <hr>
             <form class="purchaseForm">
                 <div>
-                    <label for="table">Select a product</label>
-                    <select name="table&chair" id="table" required>
+                    <label for="product">Select a product</label>
+                    <select name="itemTypeCode" id="product" required>
                         <option>-</option>
-                        <option value="table">Minecraft Backdrop</option>
+                        <option value="pep-cb-001">Circle Theme Board</option>
                     </select>
                 </div>
-                <label for="tableCountName">Select Quantitiy : </label>
-                <input type="number" id="tableCount" name="tableCountName" min="1" max="1" placeholder="Quantity" required>
+                <label for="quantity">Select Quantitiy : </label>
+                <input type="number" id="quantity" name="quantity" min="1" max="90" placeholder="Quantity" required>
                 <div>
                     <label for="startDate">Start Date :</label>
-                    <input type="date" name="startDate" min="Now" required>
+                    <input type="date" id="startDate" name="startDate" required>
                     <div>
                         <label for="rentalTime">Time : </label>
-                        <select name="timeFrame" id="rentalTime" required>
+                        <select name="rentalTime" id="startTime" required>
                             <option>-</option>
                             <option value="Moring">Morning (7am-11am)</option>
                             <option value="Afternoon">Afternoon (11am-4pm)</option>
@@ -442,9 +438,9 @@
                 </div>
                 <div>
                     <label for="endDate">Return Date :</label>
-                    <input type="date" name="endDate" required>
+                    <input type="date" id="endDate" name="endDate" required>
                     <div>
-                        <label for="rentalTime">Time : </label><select name="timeFrame" id="rentalTime" required>
+                        <label for="endTime">Time : </label><select name="endTime" id="endTime" required>
                             <option>-</option>
                             <option value="Moring">Morning (7am-11am)</option>
                             <option value="Afternoon">Afternoon (11am-4pm)</option>
@@ -452,7 +448,7 @@
                         </select>
                     </div>
                 </div>
-                <input type="submit" value="Submit">
+                <button id="addToCartBtn">Add to Cart</button>
             </form>
         </div>
     </div>
@@ -473,5 +469,7 @@
         </div>
 
     </div>
-</body>
-</html>
+</div>
+@section Scripts{
+    <script src="~/js/forms.js"></script>
+}
