--- a/Views/Birthday/cocomelon.cshtml
+++ b/Views/Birthday/cocomelon.cshtml
@@ -253,32 +253,33 @@
                 </p>
             </div>
         </div>
+        <!-- Cocomelon theme board-->
 
         <div class="purchase">
             <h2><b><u>Order Now!</u></b></h2>
             <hr>
             <form class="purchaseForm">
                 <div>
-                    <label for="table">Select a product</label>
-                    <select name="table&chair" id="table" required>
+                    <label for="product">Select a product</label>
+                    <select name="itemTypeCode" id="product" required>
                         <option>-</option>
-                        <option value="BoardABC">Board A+B+C</option>
-                        <option value="BoardA">Board A</option>
-                        <option value="BoardB">Board B</option>
-                        <option value="BoardC">Board C</option>
-                        <option value="BoardAB">Board A+B</option>
-                        <option value="BoardAC">Board A+C</option>
-                        <option value="BoardBC">Board B+C</option>
+                        <option value='["cm-tb-001","cm-tb-002","cm-tb-003"]'>Theme board A+B+C</option>
+                        <option value="cm-tb-001">Theme board A</option>
+                        <option value="cm-tb-002">Theme board B</option>
+                        <option value="cm-tb-003">Theme board C</option>
+                        <option value='["cm-tb-001","cm-tb-002"]'>Theme board A+B</option>
+                        <option value='["cm-tb-001","cm-tb-003"]'>Theme board B+C</option>
+                        <option value='["cm-tb-002","cm-tb-003"]'>Theme board A+C</option>
                     </select>
                 </div>
-                <label for="tableCountName">Select Quantitiy : </label>
-                <input type="number" id="tableCount" name="tableCountName" min="1" max="1" placeholder="Quantity" required>
+                <label for="quantity">Select Quantitiy : </label>
+                <input type="number" id="quantity" name="quantity" min="1" max="90" placeholder="Quantity" required>
                 <div>
                     <label for="startDate">Start Date :</label>
-                    <input type="date" name="startDate" required>
+                    <input type="date" id="startDate" name="startDate" required>
                     <div>
-                        <label for="rentalTime">Time : </label>
-                        <select name="timeFrame" id="rentalTime" required>
+                        <label for="startTime">Time : </label>
+                        <select name="startTime" id="startTime" required>
                             <option>-</option>
                             <option value="Moring">Morning (7am-11am)</option>
                             <option value="Afternoon">Afternoon (11am-4pm)</option>
@@ -288,9 +289,9 @@
                 </div>
                 <div>
                     <label for="endDate">Return Date :</label>
-                    <input type="date" name="endDate" required>
+                    <input type="date" id="endDate" name="endDate" required>
                     <div>
-                        <label for="rentalTime">Time : </label><select name="timeFrame" id="rentalTime" required>
+                        <label for="endTime">Time : </label><select name="endTime" id="endTime" required>
                             <option>-</option>
                             <option value="Moring">Morning (7am-11am)</option>
                             <option value="Afternoon">Afternoon (11am-4pm)</option>
@@ -298,8 +299,9 @@
                         </select>
                     </div>
                 </div>
-                <input type="submit" value="Check Availability">
+                <button id="addToCartBtn">Add to Cart</button>
             </form>
+        </div>
         </div>
     </div>
     <br>
