--- a/Views/Birthday/myLittlePony.cshtml
+++ b/Views/Birthday/myLittlePony.cshtml
@@ -1,10 +1,4 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
+﻿    <style>
         :root {
             --bdclr: rgb(255, 183, 5);
             --bdclr2: rgba(0, 59, 149);
@@ -203,8 +197,7 @@
                 font-size: 30px
             }
     </style>
-</head>
-<body class="mainPage BirthdayPage">
+<div class="mainPage BirthdayPage">
     <div class="header">
         <ul class="bannerList">
             <li>
@@ -239,6 +232,87 @@
     <div class="weddingItem">
         <div class="picture">
             <h2>Background Boards</h2>
+            <img src="birthdayImage/standing_Background5.png" width="100%" title="MyLittlePony">
+        </div>
+
+        <div>
+            <h2><i>Description</i></h2>
+            <hr>
+            <p>
+                Three background boards themed with minecraft characters<br>
+                Let children immerse in the world of ______ with our themed backgrounds<br>
+
+            </p>
+
+            <hr>
+            <div class="productDescription">
+                <h2>Product Details</h2>
+                <p>
+                    Board dimensions:
+                    <br>   Board height : 100xm,
+                    <br>   Board width : 20xm,
+                    <br>   Board length : 60cm.
+
+                </p>
+            </div>
+        </div>
+
+        
+        <div class="purchase">
+            <h2><b><u>Order Now!</u></b></h2>
+            <hr>
+            <form class="purchaseForm">
+                <div>
+                    <label for="itemTypeCode">Select a product</label>
+                    <select name="itemTypeCode" id="itemTypeCode" required>
+                        <option>-</option>
+                        <option value='["mlp-tb-001","mlp-tb-002","mlp-tb-003"]'>Minecraft Circle Theme Board (A+B+C)</option>
+                        <option value="mlp-tb-001">Board A</option>
+                        <option value="mlp-tb-002">Board B</option>
+                        <option value="mlp-tb-003">Board C</option>
+                        <option value='["mlp-tb-001","mlp-tb-002"]'> w/o{} Board A+B</option>
+                        <option value='["mlp-tb-001","mlp-tb-003"]'> w/o ''Board A+C</option>
+                        <option value='["mlp-tb-002","mlp-tb-002"]'> only ',' Board B+C</option>
+                    </select>
+                    <!-- Polymorphism : itemTypeCode can be a string or an array of strings. -->
+                    <!-- If itemTypeCode.isArray, itemTypeCode.foreach()-->
+                </div>
+                <label for="quantity">Select Quantitiy : </label>
+                <input type="number" id="quantity" name="quantity" min="1" max="1" placeholder="Quantity" required>
+                <div>
+                    <label for="startDate">Start Date :</label>
+                    <input type="date" name="startDate" id="startDate" required>
+                    <div>
+                        <label for="startTime">Time : </label>
+                        <select name="starTime" id="startTime" required>
+                            <option>-</option>
+                            <option value="Moring">Morning (7am-11am)</option>
+                            <option value="Afternoon">Afternoon (11am-4pm)</option>
+                            <option value="Evening">Evening (4pm-9pm)</option>
+                        </select>
+                    </div>
+                </div>
+                <div>
+                    <label for="endDate">Return Date :</label>
+                    <input type="date" name="endDate" id="endDate" required>
+                    <div>
+                        <label for="endTime">Time : </label><select name="endTime" id="endTime" required>
+                            <option>-</option>
+                            <option value="Moring">Morning (7am-11am)</option>
+                            <option value="Afternoon">Afternoon (11am-4pm)</option>
+                            <option value="Evening">Evening (4pm-9pm)</option>
+                        </select>
+                    </div>
+                </div>
+                <input type="submit" value="Check Availability">
+            </form>
+        </div>
+    </div>
+
+    <!-- My Little Pony Rainbow Arch-->
+    <div class="weddingItem">
+        <div class="picture">
+            <h2>My Little Pony Rainbow Arch</h2>
             <img src="birthdayImage/standing_Background5.png" width="100%" title="Tables">
         </div>
 
@@ -269,26 +343,26 @@
             <hr>
             <form class="purchaseForm">
                 <div>
-                    <label for="table">Select a product</label>
-                    <select name="table&chair" id="table" required>
+                    <label for="product">Select a product</label>
+                    <select name="itemTypeCode" id="product" required>
                         <option>-</option>
-                        <option value="BoardABC">Board A+B+C</option>
-                        <option value="BoardA">Board A</option>
-                        <option value="BoardB">Board B</option>
-                        <option value="BoardC">Board C</option>
-                        <option value="BoardAB">Board A+B</option>
-                        <option value="BoardAC">Board A+C</option>
-                        <option value="BoardBC">Board B+C</option>
+                        <option value='["mlp-ra-001","mlp-ra-002","mlp-ra-003"]'>Rainbow Arch 1+2+3</option>
+                        <option value="mlp-ra-001">Rainbow Arch 1</option>
+                        <option value="mlp-ra-002">Rainbow Arch 2</option>
+                        <option value="mlp-ra-003">Rainbow Arch 3</option>
+                        <option value='["mlp-ra-001","mlp-ra-002"]'>Rainbow Arch 1+2</option>
+                        <option value='["mlp-ra-001","mlp-ra-003"]'>Rainbow Arch 1+3</option>
+                        <option value='["mlp-ra-002","mlp-ra-003"]'>Rainbow Arch 2+3</option>
                     </select>
                 </div>
-                <label for="tableCountName">Select Quantitiy : </label>
-                <input type="number" id="tableCount" name="tableCountName" min="1" max="1" placeholder="Quantity" required>
+                <label for="quantity">Select Quantitiy : </label>
+                <input type="number" id="quantity" name="quantity" min="1" max="90" placeholder="Quantity" required>
                 <div>
                     <label for="startDate">Start Date :</label>
-                    <input type="date" name="startDate" required>
+                    <input type="date" id="startDate" name="startDate" required>
                     <div>
-                        <label for="rentalTime">Time : </label>
-                        <select name="timeFrame" id="rentalTime" required>
+                        <label for="startTime">Time : </label>
+                        <select name="startTime" id="startTime" required>
                             <option>-</option>
                             <option value="Moring">Morning (7am-11am)</option>
                             <option value="Afternoon">Afternoon (11am-4pm)</option>
@@ -298,9 +372,9 @@
                 </div>
                 <div>
                     <label for="endDate">Return Date :</label>
-                    <input type="date" name="endDate" required>
+                    <input type="date" id="endDate" name="endDate" required>
                     <div>
-                        <label for="rentalTime">Time : </label><select name="timeFrame" id="rentalTime" required>
+                        <label for="endTime">Time : </label><select name="endTime" id="endTime" required>
                             <option>-</option>
                             <option value="Moring">Morning (7am-11am)</option>
                             <option value="Afternoon">Afternoon (11am-4pm)</option>
@@ -308,11 +382,10 @@
                         </select>
                     </div>
                 </div>
-                <input type="submit" value="Check Availability">
+                <button id="addToCartBtn">Add to Cart</button>
             </form>
         </div>
     </div>
-
     <div class="weddingItem">
         <div>
             <h2><u><i>Terms and Conditions</i></u></h2>
@@ -329,5 +402,7 @@
         </div>
 
     </div>
-</body>
-</html>
+</div>
+@section Scripts{
+    <script src="~/js/forms.js"></script>
+}
