--- a/Views/Wedding/tablesChairs.cshtml
+++ b/Views/Wedding/tablesChairs.cshtml
@@ -3,12 +3,6 @@
 *@
 @{
 }
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <style>
         .mainPage {
             padding-inline: 50px;
@@ -117,8 +111,7 @@
             flex-direction: column;
         }
     </style>
-</head>
-<body class="mainPage Wedding">
+<div class="mainPage Wedding">
     <div class="header">
         <ul class="bannerList">
             <li>
@@ -263,5 +256,4 @@
         </div>
 
     </div>
-</body>
-</html>
+</div>
